--- a/views/form1.html
+++ b/views/form1.html
@@ -1,17 +1,18 @@
 <!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Pet Form</title>
-</head>
-<body>
-<form method="post" action="order2">
-    <label>
-        Animal
-        <input type="text" name="animal">
-    </label>
-    <input type="submit" value="Next">
-</form>
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Pets Form 1</title>
+    </head>
+
+    <body>
+        <form method="post" action="order2">
+            <label>
+                Animal
+                <input type="text" name="animal">
+            </label>
+
+            <input type="submit" value="Next">
+        </form>
+    </body>
 </html>
