--- a/views/results.html
+++ b/views/results.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Results page</h1>
+        <p>Thank you for ordering a {{ @SESSION.color }} {{ @SESSION.animal }}!</p>
     </body>
 </html>
